objects/Market_Expectation__c.object
<CustomObject>
    <description>R5 - Market Expectation</description>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Year_Unique__c</fullName>
        <label>Account Plan Year Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Plan_Year__c</fullName>
        <description>R5 - Account Plan Year</description>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R5 - Master Detail Relationship with Account Plan object</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Market_Expectations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Available_Market_CAPEX_MUSD__c</fullName>
        <description>R5 - Available Market CAPEX MUSD</description>
        <inlineHelpText>ABB Available Account Capital Expenditures for the Product types in this Account Plan</inlineHelpText>
        <label>Available Account CAPEX MUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Market_OPEX_MUSD__c</fullName>
        <description>R5 - Available Market OPEX MUSD</description>
        <inlineHelpText>ABB Available Account Operational Expenditures for the Product types in this Account Plan</inlineHelpText>
        <label>Available Account OPEX MUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Spend_MUSD_1__c</fullName>
        <formula>Available_Market_CAPEX_MUSD__c + Available_Market_OPEX_MUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Available Account Spend MUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>R5 -  End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Expectation_Comments__c</fullName>
        <description>SFDC 3949 - Free-type text area</description>
        <inlineHelpText>Free text to add notes</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Share_of_Available_Wallet__c</fullName>
        <formula>IF (Available_Spend_MUSD_1__c &gt; 0, Share_of_Wallet_MUSD__c/Available_Spend_MUSD_1__c, 0)</formula>
        <inlineHelpText>ABB Orders / Total Available Account Spend</inlineHelpText>
        <label>Share of Available Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_MUSD__c</fullName>
        <description>R5 - Share of Wallet MUSD field for the currency</description>
        <label>ABB Orders MUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_Per__c</fullName>
        <description>R5 - Share of Wallet</description>
        <formula>IF (Total_Spend_MUSD_1__c &gt; 0, (Share_of_Wallet_MUSD__c /  Total_Spend_MUSD_1__c ), 0)</formula>
        <inlineHelpText>ABB Orders / Total Account Spend</inlineHelpText>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date_End_Date__c</fullName>
        <label>Start Date &amp; End Date</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>R5 -  Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Available_Account_Spend_Summary__c</fullName>
        <formula>HYPERLINK($Label.SYSTEM_ABB_SHAREPOINT_FACE_TRAINING_ACCOUNT_SPEND, $Label.SYSTEM_ACCOUNT_SPEND_AWARE, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total &amp; Available Account Spend Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Market_CAPEX_MUSD__c</fullName>
        <description>R5 - Total Market CAPEX MUSD</description>
        <inlineHelpText>Total Account Capital Expenditure for the Product types in this Account Plan</inlineHelpText>
        <label>Total Account CAPEX MUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Market_OPEX_MUSD__c</fullName>
        <description>R5 - Total Market OPEX MUSD</description>
        <inlineHelpText>Total Account Operational Expenditure for the Product types in this Account Plan</inlineHelpText>
        <label>Total Account OPEX MUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spend_MUSD_1__c</fullName>
        <formula>Total_Market_CAPEX_MUSD__c + Total_Market_OPEX_MUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Account Spend MUSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Total and Available Account Spend</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Total-Avail-SPEND-{0000}</displayFormat>
        <label>Total and Available Account Spend</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Total and Available Account Spend</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ABB_Orders_MUSD_less_than_the_TotalSpend</fullName>
        <active>true</active>
        <errorConditionFormula>Share_of_Wallet_MUSD__c &gt;=  Total_Spend_MUSD_1__c</errorConditionFormula>
        <errorMessage>“ABB Orders MUSD” must be less than the sum of “Total Account CAPEX MUSD” and &quot;Total Account OPEX MUSD”&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_plan_year_comparison</fullName>
        <active>true</active>
        <description>R5</description>
        <errorConditionFormula>IF ( TEXT(Account_Plan_Year__c) != NULL &amp;&amp; TEXT(Account_Plan__r.Account_Plan_Year__c) != NULL, VALUE(TEXT(Account_Plan_Year__c)) &lt; (VALUE(TEXT(Account_Plan__r.Account_Plan_Year__c))-3), FALSE)</errorConditionFormula>
        <errorMessage>Year must be either greater than Account Plan Year or past three years from Account Plan Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Available_CAPEX_less_than_Total_CAPEX</fullName>
        <active>true</active>
        <description>R5 - Available Market CAPEX MUSD must be less than Total Market CAPEX MUSD.</description>
        <errorConditionFormula>Available_Market_CAPEX_MUSD__c  &gt;  Total_Market_CAPEX_MUSD__c</errorConditionFormula>
        <errorDisplayField>Available_Market_CAPEX_MUSD__c</errorDisplayField>
        <errorMessage>Available Account CAPEX MUSD must be less than Total Account CAPEX MUSD!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Available_OPEX_less_than_Total_OPEX</fullName>
        <active>true</active>
        <description>R5 - Available Market OPEX MUSD must be less than Total Market OPEX MUSD.</description>
        <errorConditionFormula>Available_Market_OPEX_MUSD__c  &gt;  Total_Market_OPEX_MUSD__c</errorConditionFormula>
        <errorDisplayField>Available_Market_OPEX_MUSD__c</errorDisplayField>
        <errorMessage>Available Account OPEX MUSD must be less than Total Account OPEX MUSD!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Market_Expectation_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Market Expectation.</description>
        <errorConditionFormula>ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_less_than_End_Date</fullName>
        <active>true</active>
        <description>R5 - Start Date must be less than End Date.</description>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date must be less than End Date!</errorMessage>
    </validationRules>
</CustomObject>